apps/base/media/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alist-route
spec:
  parentRefs:
    - name: gateway
      namespace: network
      sectionName: https
  hostnames:
    - "alist.${domain_name}"
  rules:
    - backendRefs:
        - name: alist
          port: 5244
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: moviepilot-route
spec:
  parentRefs:
    - name: gateway
      namespace: network
      sectionName: https
  hostnames:
    - "moviepilot.${domain_name}"
  rules:
    - backendRefs:
        - name: moviepilot
          port: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-route
spec:
  parentRefs:
    - name: gateway
      namespace: network
      sectionName: https
  hostnames:
    - "jellyfin.${domain_name}"
  rules:
    - backendRefs:
        - name: jellyfin
          port: 8096
